# spec-context-mcp

./: .chunkhound.json  .env.example  .gitignore  AGENTS.md  PLAN-PHASE2.md  PLAN.md  README.md  adaptive_horizon.py  compare_horizon_methods.py  package-lock.json  package.json  pyproject.toml  spec-dashboard.service  start-dashboard.sh  tsconfig.json
.chunkhound/db/: chunks.db
.claude/: settings.json
.claude/plans/: local-dashboard-qdrant.md  remote-dashboard-sync.md
.codex/: AGENTS.md  config.toml
.spec-context/steering/: principles.md  structure.md
PLAN/DONE/: 01-docs-env-alignment.md  02-product-naming-normalization.md  03-dashboard-url-discovery.md  04-config-version-unification.md  05-dashboard-version-check-update.md  06-embedding-provider-config.md  07-mcp-response-standardization.md  08-test-coverage-workflow-dashboard.md  09-doctor-cli-preflight.md
chunkhound/: database_factory.py  embeddings.py  llm_manager.py
chunkhound/autodoc/: cleanup.py  docsite.py  generator.py  ia.py  index_loader.py  markdown_utils.py  models.py  references.py  site_writer.py  site_writer_dirs.py  site_writer_metadata.py  site_writer_renderers.py  template_loader.py
chunkhound/code_mapper/: __init__.py  coverage.py  hyde.py  llm.py  metadata.py  models.py  orchestrator.py  pipeline.py  public_utils.py  render.py  scope.py  service.py  utils.py  writer.py
chunkhound/core/: audience.py
chunkhound/interfaces/: database_provider.py  embedding_provider.py  llm_provider.py
chunkhound/mcp_server/: __init__.py  base.py  common.py  sse.py  stdio.py  tools.py
chunkhound/parsers/: concept_extractor.py  mapping_adapter.py  parser_factory.py  rapid_yaml_parser.py  svelte_parser.py  universal_parser.py
chunkhound/registry/: __init__.py
chunkhound/services/: clustering_service.py  deep_research_service.py  embedding_service.py  indexing_coordinator.py  (+2 more)
docs/: features.md  plan3.md  planfix.md
issues/: 001-spec-workflow-integration.md
scripts/: bootstrap-python-deps.sh  check-health.sh  copy-static.cjs
src/: config.ts  doctor.ts  index.ts  postinstall.ts  server.integration.test.ts  server.test.ts  server.ts  setup.ts  workflow-types.runtime-settings.test.ts  workflow-types.ts
(+529 files in other folders)
