[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-context-mcp-chunkhound"
version = "1.0.0"
description = "ChunkHound integration for spec-context-mcp"
requires-python = ">=3.10,<3.15"
dependencies = [
    # ChunkHound core dependencies
    "duckdb>=1.4.0",
    "openai>=1.0.0",
    "packaging>=21.0",
    "aiohttp>=3.12.15",
    "rapidyaml @ git+https://github.com/biojppm/rapidyaml.git@v0.10.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-markdown>=0.5.1",
    "tree-sitter-language-pack>=0.7.3",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.6.0",
    "mcp>=1.0.0",
    "psutil>=5.8.0",
    "PyYAML>=6.0.0",
    "tiktoken>=0.9.0",
    "watchdog>=4.0.0",
    "xxhash>=3.0.0",
    # Tree-sitter language parsers
    "tree-sitter-groovy>=0.1.2",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-lua>=0.4.0",
    "tree-sitter-make>=0.1.0",
    "tree-sitter-bash>=0.25.0",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-haskell>=0.23.1",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-zig>=1.1.0",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-php>=0.24.0",
    "tree-sitter-toml>=0.7.0",
    # Database and embeddings
    "lancedb>=0.25.3",
    "pandas>=2.3.0",
    "pylance>=0.31.0",
    "voyageai>=0.2.0",
    "httpx>=0.28.1",
    # PDF and utilities
    "pymupdf>=1.23.0",
    "rich>=13.0.0",
    "readchar>=4.2.1",
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.38",
    "numpy>=1.24.0",
    "pathspec>=0.12.1",
    "pygit2>=1.12.0",
    # LLM providers
    "google-genai>=1.51.0",
    "anthropic>=0.75.0",
]


[tool.hatch.build.targets.wheel]
packages = ["chunkhound"]

[tool.hatch.build]
include = [
    "chunkhound/**/*.py",
    "chunkhound/py.typed",
    "chunkhound/code_mapper/prompts/*.md",
    "chunkhound/autodoc/prompts/*.txt",
    "chunkhound/autodoc/assets/**/*",
]

[tool.hatch.metadata]
allow-direct-references = true
